# gobscript

./: .gitignore  CMakeLists.txt  language.md  main.cpp  readme.md
GobScriptHelper/: Interactive.cpp  Interactive.hpp  StandardFunctions.cpp  StandardFunctions.hpp  Terminal.cpp  Terminal.hpp
Pigeon/: Action.cpp  Action.hpp  Array.cpp  Array.hpp  Error.cpp  Error.hpp  Execution.cpp  Execution.hpp  Function.cpp  Function.hpp  Memory.cpp  Memory.hpp  Operation.hpp  Parser.cpp  Parser.hpp  StandardFunctions.hpp  State.cpp  State.hpp  Value.cpp  Value.hpp
examples/: brain.gsh  convert_flac_to_mp3.gsh  fib.gsh  find_needle_in_haystack.gsh  printallfiles.gsh
